//! Optimization service implementation

use crate::error::{ApiError, Result};
use crate::proto::optimization::*;
use crate::streaming::optimization::OptimizationStreamManager;
use std::sync::Arc;
use tokio::sync::RwLock;
use tokio_stream::wrappers::ReceiverStream;
use tonic::{Request, Response, Status};
use tracing::{debug, info};

/// Optimization service implementation
#[derive(Debug, Clone)]
pub struct OptimizationServiceImpl {
    stream_manager: Arc<RwLock<OptimizationStreamManager>>,
}

impl OptimizationServiceImpl {
    /// Create a new optimization service
    pub fn new() -> Self {
        Self {
            stream_manager: Arc::new(RwLock::new(OptimizationStreamManager::new())),
        }
    }
}

impl Default for OptimizationServiceImpl {
    fn default() -> Self {
        Self::new()
    }
}

#[tonic::async_trait]
impl optimization_service_server::OptimizationService for OptimizationServiceImpl {
    async fn create_optimization(
        &self,
        request: Request<CreateOptimizationRequest>,
    ) -> std::result::Result<Response<CreateOptimizationResponse>, Status> {
        debug!("CreateOptimization called");

        let req = request.into_inner();

        // Create optimization decision
        let decision = OptimizationDecision {
            id: uuid::Uuid::new_v4().to_string(),
            created_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            strategy: req.strategy,
            target_services: req.target_services,
            changes: req.changes,
            rationale: req.rationale,
            expected_impact: req.expected_impact,
            constraints: req.constraints,
            status: DecisionStatus::Pending as i32,
            deployed_at: None,
            rolled_back_at: None,
            actual_impact: None,
            metadata: std::collections::HashMap::new(),
        };

        info!("Created optimization decision: {}", decision.id);

        let response = CreateOptimizationResponse {
            decision: Some(decision),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Optimization created successfully".to_string(),
                errors: vec![],
            }),
        };

        Ok(Response::new(response))
    }

    async fn get_optimization(
        &self,
        request: Request<GetOptimizationRequest>,
    ) -> std::result::Result<Response<GetOptimizationResponse>, Status> {
        debug!("GetOptimization called");

        let req = request.into_inner();

        // In production, fetch from database
        // For now, return a mock response
        let decision = OptimizationDecision {
            id: req.decision_id.clone(),
            created_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            strategy: OptimizationStrategy::CostPerformanceScoring as i32,
            target_services: vec!["service-1".to_string()],
            changes: vec![],
            rationale: "Mock optimization".to_string(),
            expected_impact: None,
            constraints: vec![],
            status: DecisionStatus::Pending as i32,
            deployed_at: None,
            rolled_back_at: None,
            actual_impact: None,
            metadata: std::collections::HashMap::new(),
        };

        let response = GetOptimizationResponse {
            decision: Some(decision),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Optimization retrieved successfully".to_string(),
                errors: vec![],
            }),
        };

        Ok(Response::new(response))
    }

    async fn list_optimizations(
        &self,
        request: Request<ListOptimizationsRequest>,
    ) -> std::result::Result<Response<ListOptimizationsResponse>, Status> {
        debug!("ListOptimizations called");

        let _req = request.into_inner();

        // In production, fetch from database with filters
        let response = ListOptimizationsResponse {
            decisions: vec![],
            pagination: Some(crate::proto::common::PageResponse {
                total_items: 0,
                total_pages: 0,
                current_page: 1,
                page_size: 10,
            }),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Optimizations retrieved successfully".to_string(),
                errors: vec![],
            }),
        };

        Ok(Response::new(response))
    }

    async fn deploy_optimization(
        &self,
        request: Request<DeployOptimizationRequest>,
    ) -> std::result::Result<Response<DeployOptimizationResponse>, Status> {
        debug!("DeployOptimization called");

        let req = request.into_inner();

        // In production, trigger deployment workflow
        let decision = OptimizationDecision {
            id: req.decision_id.clone(),
            created_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            strategy: OptimizationStrategy::CostPerformanceScoring as i32,
            target_services: vec![],
            changes: vec![],
            rationale: "Deploying optimization".to_string(),
            expected_impact: None,
            constraints: vec![],
            status: DecisionStatus::Deploying as i32,
            deployed_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            rolled_back_at: None,
            actual_impact: None,
            metadata: std::collections::HashMap::new(),
        };

        let response = DeployOptimizationResponse {
            decision: Some(decision),
            deployment_id: uuid::Uuid::new_v4().to_string(),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Deployment initiated".to_string(),
                errors: vec![],
            }),
        };

        Ok(Response::new(response))
    }

    async fn rollback_optimization(
        &self,
        request: Request<RollbackOptimizationRequest>,
    ) -> std::result::Result<Response<RollbackOptimizationResponse>, Status> {
        debug!("RollbackOptimization called");

        let req = request.into_inner();

        let decision = OptimizationDecision {
            id: req.decision_id,
            created_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            strategy: OptimizationStrategy::CostPerformanceScoring as i32,
            target_services: vec![],
            changes: vec![],
            rationale: req.reason,
            expected_impact: None,
            constraints: vec![],
            status: DecisionStatus::RolledBack as i32,
            deployed_at: None,
            rolled_back_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            actual_impact: None,
            metadata: std::collections::HashMap::new(),
        };

        let response = RollbackOptimizationResponse {
            decision: Some(decision),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Rollback completed".to_string(),
                errors: vec![],
            }),
        };

        Ok(Response::new(response))
    }

    async fn cancel_optimization(
        &self,
        request: Request<CancelOptimizationRequest>,
    ) -> std::result::Result<Response<CancelOptimizationResponse>, Status> {
        debug!("CancelOptimization called");

        let req = request.into_inner();

        let decision = OptimizationDecision {
            id: req.decision_id,
            created_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            strategy: OptimizationStrategy::CostPerformanceScoring as i32,
            target_services: vec![],
            changes: vec![],
            rationale: req.reason,
            expected_impact: None,
            constraints: vec![],
            status: DecisionStatus::Cancelled as i32,
            deployed_at: None,
            rolled_back_at: None,
            actual_impact: None,
            metadata: std::collections::HashMap::new(),
        };

        let response = CancelOptimizationResponse {
            decision: Some(decision),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Optimization cancelled".to_string(),
                errors: vec![],
            }),
        };

        Ok(Response::new(response))
    }

    async fn validate_optimization(
        &self,
        request: Request<ValidateOptimizationRequest>,
    ) -> std::result::Result<Response<ValidateOptimizationResponse>, Status> {
        debug!("ValidateOptimization called");

        let _req = request.into_inner();

        let validation = ValidationResult {
            valid: true,
            errors: vec![],
            warnings: vec![],
            revised_impact: None,
        };

        let response = ValidateOptimizationResponse {
            validation: Some(validation),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Validation completed".to_string(),
                errors: vec![],
            }),
        };

        Ok(Response::new(response))
    }

    type SubscribeOptimizationEventsStream = ReceiverStream<std::result::Result<OptimizationEvent, Status>>;

    async fn subscribe_optimization_events(
        &self,
        request: Request<SubscribeOptimizationEventsRequest>,
    ) -> std::result::Result<Response<Self::SubscribeOptimizationEventsStream>, Status> {
        debug!("SubscribeOptimizationEvents called");

        let req = request.into_inner();
        let stream_manager = self.stream_manager.read().await;

        let stream = stream_manager.subscribe_events(req.decision_ids, req.status_filter);

        Ok(Response::new(stream))
    }

    async fn batch_create_optimizations(
        &self,
        request: Request<tonic::Streaming<CreateOptimizationRequest>>,
    ) -> std::result::Result<Response<BatchCreateOptimizationsResponse>, Status> {
        debug!("BatchCreateOptimizations called (client streaming)");

        let mut stream = request.into_inner();
        let mut decisions = vec![];
        let mut successful = 0;
        let mut failed = 0;

        while let Some(req) = stream.message().await? {
            // Process each request
            let decision = OptimizationDecision {
                id: uuid::Uuid::new_v4().to_string(),
                created_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
                strategy: req.strategy,
                target_services: req.target_services,
                changes: req.changes,
                rationale: req.rationale,
                expected_impact: req.expected_impact,
                constraints: req.constraints,
                status: DecisionStatus::Pending as i32,
                deployed_at: None,
                rolled_back_at: None,
                actual_impact: None,
                metadata: std::collections::HashMap::new(),
            };

            decisions.push(decision);
            successful += 1;
        }

        let response = BatchCreateOptimizationsResponse {
            decisions,
            successful,
            failed,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: format!("Batch created {} optimizations", successful),
                errors: vec![],
            }),
        };

        Ok(Response::new(response))
    }

    type OptimizationSessionStream = ReceiverStream<std::result::Result<OptimizationSessionMessage, Status>>;

    async fn optimization_session(
        &self,
        request: Request<tonic::Streaming<OptimizationSessionMessage>>,
    ) -> std::result::Result<Response<Self::OptimizationSessionStream>, Status> {
        debug!("OptimizationSession called (bidirectional streaming)");

        let stream_manager = self.stream_manager.read().await;
        let stream = stream_manager.create_session(request.into_inner());

        Ok(Response::new(stream))
    }
}
